--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -1992,6 +1992,42 @@ a code {
 }
 
 
+/********************/
+/* SUB/SUPERSCRIPTS */
+/********************/
+
+sub,
+sup {
+    font-size: 0.7em;
+    position: relative;
+    line-height: 0.3em;
+    font-variant-numeric: lining-nums;
+}
+
+sub {
+    bottom: 0.1em;
+}
+
+/*  SUBSCRIPT+SUPERSCRIPT (necessary for inflation adjuster, and other math)
+ */
+.subsup {
+    margin-left: 0.15em;
+    margin-right: 0.1em;
+    display: inline-flex;
+    flex-flow: column;
+    align-items: flex-start;
+    vertical-align: text-bottom;
+    position: relative;
+    bottom: -0.1em;
+}
+.subsup sup,
+.subsup sub {
+    position: relative;
+    line-height: 1;
+    font-size: 0.6em;
+}
+
+
 /********/
 /* MISC */
 /********/
@@ -2786,10 +2822,11 @@ body.reader-mode-active #sidebar,
 body.reader-mode-active #page-metadata .page-status,
 body.reader-mode-active #page-metadata .page-confidence,
 body.reader-mode-active #page-metadata .page-importance,
-body.reader-mode-active #page-metadata .backlinks,
-body.reader-mode-active #page-metadata .link-bibliography,
-body.reader-mode-active #page-metadata .similars,
+body.reader-mode-active #page-metadata .page-backlinks,
+body.reader-mode-active #page-metadata .page-link-bibliography,
+body.reader-mode-active #page-metadata .page-similars,
 body.reader-mode-active #page-metadata .page-date-range::after,
+body.reader-mode-active #page-metadata .page-metadata-fields::after,
 body.reader-mode-active #TOC ul li::before,
 body.reader-mode-active #TOC .toc-collapse-toggle-button,
 body.reader-mode-active #sidenote-column-left,
@@ -2907,7 +2944,7 @@ body.reader-mode-active .markdownBody p code {
 }
 
 body.reader-mode-active .date-range .subsup {
-    margin: 0;
+    margin: -0.5em 0 0 0;
 }
 
 /*	Anti-style zone.
